--- a/style.css
+++ b/style.css
@@ -1,23 +1,5 @@
-.table {
-	width: 100%;
-	margin-bottom: 20px;
-	border: 1px solid #dddddd;
-	border-collapse: collapse; 
-}
-.table th {
-	font-weight: bold;
-	padding: 5px;
-	background: #efefef;
-	border: 1px solid #dddddd;
-}
-.table td {
-	border: 1px solid #dddddd;
-	padding: 5px;
-}
-
-
-h1 {
-    color: rgb(84, 55, 211);
-    font-size: 24px;
-    font-style: oblique;
+body {
+	background-color: azure;
+	font-family: 'Times New Roman', Times, serif;
+	color: rgb(15, 15, 116);
 }
